# fastapi-demo

./: .clinerules  .cursorrules  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  FINAL_CHECKLIST.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  alembic.ini  pyproject.toml  pytest.ini  seed_db.py  setup.sh  test_setup.sh
alembic/: env.py
alembic/versions/: 2f529bd5172b_add_app_state_table.py  a94ff349e82d_initial_migration.py
app/: main.py
app/agents/: classifier.py  summarizer.py  thread_pipeline.py
app/api/: __init__.py  gmail.py  users.py
app/core/: config.py  database.py
app/crud/: __init__.py  app_state.py  user.py
app/models/: __init__.py  app_state.py  emails.py  user.py
app/schemas/: __init__.py  emails.py  user.py
app/services/: __init__.py  gmail.py
tests/: README.md  conftest.py  test_users.py
tests/e2e/: test_api_scenarios.py
tests/integration/: test_user_api.py
tests/unit/: test_crud.py  test_gmail_service.py  test_schemas.py
